[package]
name = "yomikiri-unidic-build"
version = "0.1.0"
edition = "2021"


[dependencies]
lindera-unidic-builder = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
lindera-core = { git = "https://github.com/BlueGreenMagick/lindera.git", branch = "yomikiri" }
csv = "1.2"
yomikiri-dictionary = { path = "../../dictionary", default-features = false }
yomikiri-dictionary-types = { path = "../../dictionary-types" }
